--- a/src/app/components/device-list/device-list.component.html
+++ b/src/app/components/device-list/device-list.component.html
@@ -1,5 +1,5 @@
 <div>
-  <h1 class="title">Device list</h1>
+  <h1 class="title">Список устройств</h1>
   <button 
     class="button" 
     (click)="logout()">
@@ -14,9 +14,9 @@
   <table *ngIf="!errorMessage">
     <thead>
       <tr>
-        <th>Id</th>
-        <th>Name</th>
-        <th>Last active</th>
+        <th>ID</th>
+        <th>Название</th>
+        <th>Дата последней активности</th>
       </tr>
     </thead>
     <tbody>
